--- a/src/app/signup/work-data/work-data.component.html
+++ b/src/app/signup/work-data/work-data.component.html
@@ -254,13 +254,12 @@
             >
                 العودة
             </label>
-            <a href="#">
-                <input
-                    class="btn-success form-control"
-                    type="button"
-                    value="العودة"
-                >
-            </a>
+            <input
+                class="btn-success form-control"
+                type="button"
+                (click)="goBack()"
+                value="العودة"
+            >
         </div>
     </li>
 </div>
