--- a/src/app/signup/education-data/education-data.component.html
+++ b/src/app/signup/education-data/education-data.component.html
@@ -1,14 +1,24 @@
 <div>
-    <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
+    <ngx-loading
+        [show]="loading"
+        [config]="{ backdropBorderRadius: '14px' }"
+    ></ngx-loading>
     <div class="row">
         <div class="col-12">
             <h5>المؤهل الدراسي</h5>
         </div>
     </div>
     <br>
-    <div class="row clearfix" align="center">
+    <div
+        class="row clearfix"
+        align="center"
+    >
         <div class="col-md-12">
-            <table class="table table-bordered table-hover table-responsive" id="grades_table" width="100%">
+            <table
+                class="table table-bordered table-hover table-responsive"
+                id="grades_table"
+                width="100%"
+            >
                 <thead>
                     <tr>
                         <th class="text-center">م</th>
@@ -24,41 +34,114 @@
                         <td colspan="6">لا يوجد بيانات</td>
                     </tr>
 
-                    <tr id="addr0" *ngFor="let EdU of PersonEducation;let i = index">
+                    <tr
+                        id="addr0"
+                        *ngFor="let EdU of PersonEducation;let i = index"
+                    >
                         <td>{{i+1}}</td>
                         <td>
                             <!-- <input type="text" name="gr0" class="form-control" [(ngModel)]="PersonEducation[i].Degree"> -->
-                            <select name="gr0" class="form-control" [(ngModel)]="PersonEducation[i].DegreeID">
-                                <option value="0" disabled selected>--اختر المؤهل--</option>
-                                <option *ngFor="let Col of Degree" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="gr0"
+                                class="form-control"
+                                [(ngModel)]="PersonEducation[i].DegreeID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر المؤهل--
+                                </option>
+                                <option
+                                    *ngFor="let Col of Degree"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                         <td>
                             <!-- <input type="text" name="cl0" class="form-control"> -->
-                            <select name="cl0" class="form-control" [(ngModel)]="PersonEducation[i].ColledgeID">
-                                <option value="0" disabled selected>--اختر الكلية--</option>
-                                <option *ngFor="let Col of Colledge" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="cl0"
+                                class="form-control"
+                                [(ngModel)]="PersonEducation[i].ColledgeID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر الكلية--
+                                </option>
+                                <option
+                                    *ngFor="let Col of Colledge"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                         <td>
                             <!-- <input type="text" name="un0" class="form-control"> -->
-                            <select name="un0" class="form-control" [(ngModel)]="PersonEducation[i].UniversityID">
-                                <option value="0" disabled selected>--اخترالجامعة--</option>
-                                <option *ngFor="let Col of University" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="un0"
+                                class="form-control"
+                                [(ngModel)]="PersonEducation[i].UniversityID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اخترالجامعة--
+                                </option>
+                                <option
+                                    *ngFor="let Col of University"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                         <td>
                             <!-- <input type="text" name="sp0" class="form-control"> -->
-                            <select name="sp0" class="form-control" [(ngModel)]="PersonEducation[i].SpecializationID">
-                                <option value="0" disabled selected>--اختر التخصص--</option>
-                                <option *ngFor="let Col of Specialization" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="sp0"
+                                class="form-control"
+                                [(ngModel)]="PersonEducation[i].SpecializationID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر التخصص--
+                                </option>
+                                <option
+                                    *ngFor="let Col of Specialization"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                         <td>
                             <!-- <input type="text" name="ye0" class="form-control"> -->
-                            <select name="ye0" class="form-control" [(ngModel)]="PersonEducation[i].YearID">
-                                <option value="0" disabled selected>--اختر السنه--</option>
-                                <option *ngFor="let Col of Year" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="ye0"
+                                class="form-control"
+                                [(ngModel)]="PersonEducation[i].YearID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر السنه--
+                                </option>
+                                <option
+                                    *ngFor="let Col of Year"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                     </tr>
@@ -68,11 +151,21 @@
         </div>
         <div class="add-remove col-md-12">
             <div class="row">
-                <a style="margin: 0 auto;" id="add_row" class="btn btn-success col-md-3 col-sm-4" (click)="AddEducationData()">
+                <a
+                    style="margin: 0 auto;"
+                    id="add_row"
+                    class="btn btn-success col-md-3 col-sm-4"
+                    (click)="AddEducationData()"
+                >
                     إضافة مؤهل
                 </a>
                 <p></p>
-                <a style="margin: 0 auto;" id="delete_row" class="btn btn-danger col-md-3 col-sm-4" (click)="RemoveLastEducation()">
+                <a
+                    style="margin: 0 auto;"
+                    id="delete_row"
+                    class="btn btn-danger col-md-3 col-sm-4"
+                    (click)="RemoveLastEducation()"
+                >
                     حذف أخر إدخال
                 </a>
                 <p></p>
@@ -87,9 +180,15 @@
         </div>
     </div>
     <br>
-    <div class="row clearfix" align="center">
+    <div
+        class="row clearfix"
+        align="center"
+    >
         <div class="col-md-12">
-            <table class="table table-bordered table-hover" id="courses_table">
+            <table
+                class="table table-bordered table-hover"
+                id="courses_table"
+            >
                 <thead>
                     <tr>
                         <th class="text-center">م</th>
@@ -101,19 +200,50 @@
                     <tr *ngIf="PersonTraining.length==0">
                         <td colspan="3">لا يوجد بيانات</td>
                     </tr>
-                    <tr id="addr0" *ngFor="let EdU of PersonTraining;let i = index">
+                    <tr
+                        id="addr0"
+                        *ngFor="let EdU of PersonTraining;let i = index"
+                    >
                         <td>{{i+1}}</td>
                         <td>
                             <!-- <input type="text" name="co0" class="form-control"> -->
-                            <select name="co0" class="form-control" [(ngModel)]="PersonTraining[i].CourseID">
-                                <option value="0" disabled selected>--اختر الدورة التدريبية--</option>
-                                <option *ngFor="let Col of Courses" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="co0"
+                                class="form-control"
+                                [(ngModel)]="PersonTraining[i].CourseID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر الدورة التدريبية--
+                                </option>
+                                <option
+                                    *ngFor="let Col of Courses"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                         <td>
-                            <select name="ye0" class="form-control" [(ngModel)]="PersonTraining[i].YearID">
-                                <option value="0" disabled selected>--اختر السنه--</option>
-                                <option *ngFor="let Col of Year" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="ye0"
+                                class="form-control"
+                                [(ngModel)]="PersonTraining[i].YearID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر السنه--
+                                </option>
+                                <option
+                                    *ngFor="let Col of Year"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                     </tr>
@@ -122,11 +252,21 @@
         </div>
         <div class="add-remove col-md-12">
             <div class="row">
-                <a style="margin: 0 auto;" id="add_rowc" class="btn btn-success col-md-3 col-sm-4" (click)="AddTraining()">
+                <a
+                    style="margin: 0 auto;"
+                    id="add_rowc"
+                    class="btn btn-success col-md-3 col-sm-4"
+                    (click)="AddTraining()"
+                >
                     إضافة دورة
                 </a>
                 <p></p>
-                <a style="margin: 0 auto;" id="delete_rowc" class="btn btn-danger col-md-3 col-sm-4" (click)="RemoveLastTraining()">
+                <a
+                    style="margin: 0 auto;"
+                    id="delete_rowc"
+                    class="btn btn-danger col-md-3 col-sm-4"
+                    (click)="RemoveLastTraining()"
+                >
                     حذف أخر إدخال
                 </a>
                 <p></p>
@@ -140,9 +280,15 @@
         </div>
     </div>
     <br>
-    <div class="row clearfix" align="center">
+    <div
+        class="row clearfix"
+        align="center"
+    >
         <div class="col-md-12">
-            <table class="table table-bordered table-hover" id="exp_table">
+            <table
+                class="table table-bordered table-hover"
+                id="exp_table"
+            >
                 <thead>
                     <tr>
                         <th class="text-center">م</th>
@@ -154,20 +300,41 @@
                     <tr *ngIf="PersonExperience.length==0">
                         <td colspan="3">لا يوجد بيانات</td>
                     </tr>
-                    <tr id="addr0" *ngFor="let EdU of PersonExperience;let i = index">
+                    <tr
+                        id="addr0"
+                        *ngFor="let EdU of PersonExperience;let i = index"
+                    >
                         <td>{{i+1}}</td>
                         <td>
                             <!-- <input type="text" name="co0" class="form-control"> -->
-                            <select name="exp0" class="form-control" [(ngModel)]="PersonExperience[i].BusinessSectorID">
-                                <option value="0" disabled selected>--اختر قطاع العمل--</option>
-                                <option *ngFor="let Col of BusinessSector" value="{{Col.ID}}" [text]="Col.Name"></option>
+                            <select
+                                name="exp0"
+                                class="form-control"
+                                [(ngModel)]="PersonExperience[i].BusinessSectorID"
+                            >
+                                <option
+                                    value="0"
+                                    disabled
+                                    selected
+                                >
+                                    --اختر قطاع العمل--
+                                </option>
+                                <option
+                                    *ngFor="let Col of BusinessSector"
+                                    value="{{Col.ID}}"
+                                    [text]="Col.Name"
+                                ></option>
                             </select>
                         </td>
                         <td>
-                            <input type="text" name="expy0" class="form-control" [(ngModel)]="PersonExperience[i].DurationInYears">
+                            <input
+                                type="text"
+                                name="expy0"
+                                class="form-control"
+                                [(ngModel)]="PersonExperience[i].DurationInYears"
+                            >
                         </td>
                     </tr>
-
 
                     <!-- <tr id="addexp0">
                         <td>1</td>
@@ -184,11 +351,21 @@
         </div>
         <div class="add-remove col-md-12">
             <div class="row">
-                <a style="margin: 0 auto;" id="add_rowe" class="btn btn-success col-md-3 col-sm-4" (click)="AddExperience()">
+                <a
+                    style="margin: 0 auto;"
+                    id="add_rowe"
+                    class="btn btn-success col-md-3 col-sm-4"
+                    (click)="AddExperience()"
+                >
                     إضافة خبرة
                 </a>
                 <p></p>
-                <a style="margin: 0 auto;" id="delete_rowe" class="btn btn-danger col-md-3 col-sm-4" (click)="RemoveLastExperience()">
+                <a
+                    style="margin: 0 auto;"
+                    id="delete_rowe"
+                    class="btn btn-danger col-md-3 col-sm-4"
+                    (click)="RemoveLastExperience()"
+                >
                     حذف أخر إدخال
                 </a>
                 <p></p>
@@ -199,20 +376,34 @@
     <div class="pager wizard row justify-content-center">
         <li class="col-lg-2 col-md-3 col-sm-4 next">
             <div class="form-group">
-                <label for style="opacity:0">
+                <label
+                    for
+                    style="opacity:0"
+                >
                     حفظ وإستمرار
                 </label>
-                <input class="btn-success form-control" type="submit" value="حفظ وإستمرار" (click)="OnSubmit()">
+                <input
+                    class="btn-success form-control"
+                    type="submit"
+                    value="حفظ وإستمرار"
+                    (click)="OnSubmit()"
+                >
             </div>
         </li>
         <li class="col-lg-2 col-md-3 col-sm-4 previous disabled">
             <div class="form-group">
-                <label for style="opacity:0">
+                <label
+                    for
+                    style="opacity:0"
+                >
                     العودة
                 </label>
-                <a href="#">
-                    <input class="btn-success form-control" type="button" value="العودة">
-                </a>
+                <input
+                    class="btn-success form-control"
+                    type="button"
+                    value="العودة"
+                    (click)="goBack()"
+                >
             </div>
         </li>
     </div>
